- Dropdown outer click hide fix - Tag spacing fix - Welcome message UI change

--- a/public/assets/scss/styles.scss
+++ b/public/assets/scss/styles.scss
@@ -227,7 +227,7 @@ input[type=number] {
         opacity: 0.75;
     }
     .input-control {
-        padding-left: 2.5rem;
+        padding-left: 3rem;
     }
 }
 
@@ -496,10 +496,10 @@ label {
             border: 1px solid #ced4da;
             font-size: 12px;
             border-radius: 20px;
-            padding: 2px 25px 2px 6px;
+            padding: 5px 25px 5px 13px;
             margin: 2px;
             position: relative;
-
+            line-height: 1.25;
             .remove {
                 outline: none;
                 padding: 0;
